src/objects/LoginSiniestros__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Para hacer la autenticación en SFDC en la parte de siniestros y guardar los datos.</description>
    <fields>
        <fullName>Duracion__c</fullName>
        <label>Duración</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaFin__c</fullName>
        <label>FechaFin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaIni__c</fullName>
        <label>FechaIni</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pwd__c</fullName>
        <label>Pwd</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Usr__c</fullName>
        <label>Usr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LoginSiniestros</label>
</CustomObject>